Prime hightlight now working

--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,23 @@
   font-size: 30px;
   text-align: center;
 }
+.highlighted {
+  background-color: green;
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  padding: 20px;
+  font-size: 30px;
+  text-align: center;
+}
+
+.prime {
+  background-color: blue;
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  padding: 20px;
+  font-size: 30px;
+  text-align: center;
+}
+
+
 
 
 
