--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,16 @@
   text-align: center;
 }
 
+.key {
+  background-color: #ffffffcc;
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  padding: 5px;
+  font-size: 25px;
+  text-align: center;
+}
+
+
+
 
 
 
